# oh-my-astock

./: .gitignore  BUG_FIXES_REPORT.md  CHANGES_AND_TESTS.md  CLAUDE.md  FILES_CREATED.txt  FINAL_CHECKLIST.md  FINAL_VERIFICATION.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_INDEX.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  REFINEMENTS.md  SUMMARY.md  TASK_COMPLETION.md  TESTS_COMPLETED.md  VIRTUAL_ENV_SETUP.md  manage.sh  pyproject.toml  pytest.ini  requirements.txt  run_backend.py  test_filter.js
.claude/: ralph-loop.local.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  requirements.txt  run_api_tests.sh
backend/.claude/: ralph-loop.local.md
backend/backend/: main.py
backend/src/: config.py  database.py  main.py
backend/tests/: conftest.py
frontend/: .env.example  .eslintrc.json  .gitignore  CHART_CHANGES.md  DELIVERY_COMPLETE.md  PERFORMANCE_TESTING.md  PHASE5_SUMMARY.md  README.md  TESTS_SUMMARY.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/tests/: DateSelector.test.tsx  StockChart.integration.test.tsx  StockChart.test.tsx  StockInfoDisplay.test.tsx
specs/000-duckdb-stock-setup/: plan.md  quickstart.md  research.md  spec.md
specs/001-add-stock-menus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-calendar-stock-industry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-database-migration-stock-info/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-duckdb-stock-setup/: data-model.md  plan.md  spec.md  tasks.md
specs/001-stock-individual-info/: data-model.md  plan.md  (+4 more)
src/: __init__.py  config.py  main.py
test_db/: stock_test.duckdb.wal
tests/: README.md  conftest.py
(+170 files in other folders)
