[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-astock"
version = "0.1.0"
description = "DuckDB-based stock data management library with FastAPI backend"
authors = [{name = "Claude Code"}]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.8.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "colorama>=0.4.0",
    # FastAPI backend dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
stocklib = "cli.commands:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    # FastAPI development dependencies
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"